Rest client working - Thymeleaf pages in progress

--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -2,27 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en" th:fragment="head">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <!--link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
-              th:href="@{/webjars/bootstrap/3.3.4/css/bootstrap.min.css}"
+        <link href="/webjars/bootstrap/4.0.0-1/css/bootstrap.min.css"
+              th:href="@{/webjars/bootstrap/4.0.0-1/css/bootstrap.min.css}"
               rel="stylesheet" media="screen" />
 
-        <!--script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
-                th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script-->
+        <script src="/webjars/bootstrap/4.0.0-1/bootstrap.min.js"
+                th:src="@{/webjars/bootstrap/4.0.0-1/bootstrap.min.js}"></script>
 
-        <script src="../static/js/bootstrap.js" th:src="@{/js/bootstrap.js}"></script>
-
-        <link href="../static/css/bootstrap.css"
-              th:href="@{/css/bootstrap.css}" rel="stylesheet" media="screen"/>
-
-        <link href="../static/css/bootstrap-grid.css"
-              th:href="@{/css/bootstrap-grid.css}" rel="stylesheet" media="screen"/>
-
-        <link href="../static/css/bootstrap-reboot.css"
-              th:href="@{/css/bootstrap.css}" rel="stylesheet" media="screen"/>
-              th:href="@{/css/bootstrap.css}" rel="stylesheet" media="screen"/>
-
-        <link href="../static/css/ssw.css"
-              th:href="@{/css/ssw.css}" rel="stylesheet" media="screen"/>
+        <script src="/webjars/jquery/3.3.1-1/jquery.min.js"
+                th:src="@{/webjars/jquery/3.3.1-1/jquery.min.js}"></script>
     </head>
     <body>
 
