--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,37 +3,21 @@
 <head lang="en">
 
 </head>
-<body>
-
-<div class="container">
-    <div th:fragment="header">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
-                    <ul class="nav navbar-nav">
-                        <li><a href="#" th:href="@{/persons}">Products</a></li>
-                        <li><a href="#" th:href="@{/person/new}">Create Product</a></li>
-                    </ul>
-
-                </div>
-            </div>
-        </nav>
-
-        <div class="jumbotron">
-            <div class="row text-center">
-                <div class="">
-                    <h2>Spring Framework ssw</h2>
-
-                    <h3>Spring Boot Web App</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <img src="../../static/images/NewBannerBOOTS_2.png" width="400"
-                     th:src="@{/images/NewBannerBOOTS_2.png}"/>
+    <body>
+        <div class="container">
+            <div th:fragment="header">
+                <nav class="navbar navbar-dark bg-dark">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <a class="navbar-brand" href="#" th:href="@{/index}">Home</a>
+                            <ul class="nav navbar-nav">
+                                <li class="nav-item"><a href="#" th:href="@{/people}">People</a></li>
+                                <li class="nav-item"><a href="#" th:href="@{/personform}">Add a new person</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
             </div>
         </div>
-    </div>
-</div>
-</body>
+    </body>
 </html>
