--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,5 +8,10 @@
         <div class="container-fluid">
             <th:block th:include="fragments/header :: header"></th:block>
         </div>
+        <div class="jumbotron">
+            <h1>Welcome!</h1>
+            <p class="lead">This is a sample spring boot app using JPA persistence, security, thymeleaf page templates,
+                jquery for front end JS client interaction and bootstrap to pretty the pages up </p>
+        </div>
     </body>
 </html>
