--- a/src/main/resources/templates/personform.html
+++ b/src/main/resources/templates/personform.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
+    <head lang="en">
+        <title>Person form</title>
+        <th:block th:include="fragments/headerinc :: head"></th:block>
+    </head>
+    <body>
+        <div class="container">
+            <th:block th:include="fragments/header :: header"></th:block>
 
-    <title>Person form</title>
-
-    <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
-</head>
-<body>
-<div class="container">
-    <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
-
-    <h2>Who are you?</h2>
-    <div>
-        <form class="form-horizontal" th:object="${person}" th:action="@{/person}" method="post">
-            <input type="hidden" th:field="*{id}"/>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Age:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{age}"/>
-                </div>
+            <h2>Who are you?</h2>
+            <div>
+                <form class="form-horizontal" th:object="${person}" th:action="@{/person}" method="post">
+                    <input type="hidden" th:field="*{id}"/>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Age:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" th:field="*{age}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Birthday:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" th:field="*{birthday}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Name:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" th:field="*{name}"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Birthday:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{birthday}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Name:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{name}"/>
-                </div>
-            </div>
-            <div class="row">
-                <button type="submit" class="btn btn-default">Submit</button>
-            </div>
-        </form>
-    </div>
-</div>
-
-</body>
+        </div>
+    </body>
 </html>
