--- a/src/main/resources/templates/personshow.html
+++ b/src/main/resources/templates/personshow.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
+    <head lang="en">
+        <title>Spring Framework ssw</title>
+        <th:block th:include="fragments/headerinc :: head"></th:block>
+    </head>
+    <body>
+        <div class="container">
+            <th:block th:include="fragments/header :: header"></th:block>
 
-    <title>Spring Framework ssw</title>
-
-    <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
-</head>
-<body>
-<div class="container">
-    <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
-
-    <h2>About ${person.age}</h2>
-        <div>
-            <form class="form-horizontal">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Id:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${person.age}">Age</p></div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Description:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${person.birthday}">Birthday</p>
+            <h2>About ${person}</h2>
+            <div>
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Id:</label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static" th:text="${person.age}">Age</p></div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Price:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${person.name}">Name</p>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Description:</label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static" th:text="${person.birthday}">Birthday</p>
+                        </div>
                     </div>
-                </div>
-            </form>
-    </div>
-</div>
-
-</body>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Price:</label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static" th:text="${person.name}">Name</p>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </body>
 </html>
