--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -6,7 +6,7 @@
               th:href="@{/webjars/bootstrap/4.0.0-1/css/bootstrap.min.css}"
               rel="stylesheet" media="screen" />
 
-        <script src="/webjars/bootstrap/4.0.0-1/bootstrap.min.js"
+        <script src="/webjars/bootstrap/4.0.0/bootstrap.min.js"
                 th:src="@{/webjars/bootstrap/4.0.0-1/bootstrap.min.js}"></script>
 
         <script src="/webjars/jquery/3.3.1-1/jquery.min.js"
