--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -9,12 +9,13 @@
             <div class="container-fluid">
                 <th:block th:include="fragments/header :: header"></th:block>
             </div>
-            <div th:if="${not #lists.isEmpty(persons)}">
+            <div th:if="${not #lists.isEmpty(people)}">
                 <h2>Person List</h2>
                 <table class="table table-striped">
                     <tr>
                         <th>Id</th>
-                        <th>Name</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
                         <th>Age</th>
                         <th>Birthday</th>
                         <th>View</th>
@@ -22,8 +23,9 @@
                         <th>Delete</th>
                     </tr>
                     <tr th:each="person : ${people}">
-                        <td th:text="${person.id}"><a href="/person/${person.id}">Id</a></td>
-                        <td th:text="${person.name}">Name</td>
+                        <td th:text="${person.id}">Id</td>
+                        <td th:text="${person.firstName}">First Name</td>
+                        <td th:text="${person.lastName}">Last Name</td>
                         <td th:text="${person.age}">Age</td>
                         <td th:text="${person.birthday}">Birthday</td>
                         <td>
