--- a/src/main/resources/templates/personform.html
+++ b/src/main/resources/templates/personform.html
@@ -11,7 +11,7 @@
             <h2>Who are you?</h2>
             <div>
                 <form class="form-horizontal" th:object="${person}" th:action="@{/person}" method="post">
-                    <input type="hidden" th:field="*{id}"/>
+                    <input type="hidden" th:field="*{person}"/>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Age:</label>
                         <div class="col-sm-10">
