--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
     <head lang="en">
         <title>Basic Springboot App</title>
         <th:block th:include="fragments/headerinc :: head"></th:block>
@@ -10,7 +10,11 @@
         </div>
         <div class="jumbotron">
             <h1>Error!</h1>
-            <p class="lead">{error}</p>
+            <p class="lead" th:text="${error}">Error:</p>
+            <p class="lead" th:text="${resourceName}">ResourceName:</p>
+            <p class="lead" th:text="${fieldName}">Fieldname:</p>
+            <p class="lead" th:text="${fieldValue}">Fieldvalue:</p>
+            <p class="lead" th:text="${stackTrace}">Stacktrace:</p>
         </div>
     </body>
 </html>
