--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en" th:fragment="head">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <link href="/webjars/bootstrap/4.0.0-1/css/bootstrap.min.css"
-              th:href="@{/webjars/bootstrap/4.0.0-1/css/bootstrap.min.css}"
+        <link href="/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css"
+              th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}"
               rel="stylesheet" media="screen" />
 
-        <script src="/webjars/bootstrap/4.0.0/bootstrap.min.js"
-                th:src="@{/webjars/bootstrap/4.0.0-1/bootstrap.min.js}"></script>
+        <script src="/webjars/bootstrap/4.0.0-2/webjars-requirejs.js"
+                th:src="@{/webjars/bootstrap/4.0.0-2/webjars-requirejs.js}"></script>
 
         <script src="/webjars/jquery/3.3.1-1/jquery.min.js"
                 th:src="@{/webjars/jquery/3.3.1-1/jquery.min.js}"></script>
