--- a/src/main/resources/templates/personshow.html
+++ b/src/main/resources/templates/personshow.html
@@ -8,27 +8,15 @@
         <div class="container">
             <th:block th:include="fragments/header :: header"></th:block>
 
-            <h2>About ${person}</h2>
+            <h2>About:</h2>
             <div>
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Id:</label>
-                        <div class="col-sm-10">
-                            <p class="form-control-static" th:text="${person.age}">Age</p></div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Description:</label>
-                        <div class="col-sm-10">
-                            <p class="form-control-static" th:text="${person.birthday}">Birthday</p>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Price:</label>
-                        <div class="col-sm-10">
-                            <p class="form-control-static" th:text="${person.name}">Name</p>
-                        </div>
-                    </div>
-                </form>
+                <h3>Id </h3><div th:text="${person.personId}"></div>
+                <h3>First </h3><div th:text="${person.firstName}"></div>
+                <h3>Last </h3><div th:text="${person.lastName}"></div>
+                <h3>Age</h3><div th:text="${person.age}"></div>
+                <h3>Birthday</h3><div th:text="${person.birthday}"></div>
+                <h3>Edit</h3><div><btn th:href="${'/person/edit/' + person.personId}"></btn></div>
+                <h3>Delete</h3><div><btn th:href="${'/person/delete/' + person.personId}"></btn></div>
             </div>
         </div>
     </body>
