--- a/src/main/resources/templates/personform.html
+++ b/src/main/resources/templates/personform.html
@@ -10,24 +10,30 @@
 
             <h2>Who are you?</h2>
             <div>
-                <form class="form-horizontal" th:object="${person}" th:action="@{/person}" method="post">
-                    <input type="hidden" th:field="*{person}"/>
+                <form class="form-horizontal" th:object="${person}" th:action="@{/person/add}" method="post">
+                    <input type="hidden" th:field="${person}"/>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">First Name:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" th:field="${person.firstName}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Last Name:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" th:field="${person.lastName}"/>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Age:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" th:field="*{age}"/>
+                            <input type="text" class="form-control" th:field="${person.age}"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Birthday:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" th:field="*{birthday}"/>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Name:</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" th:field="*{name}"/>
+                            <input type="text" class="form-control" th:field="${person.birthday}"/>
                         </div>
                     </div>
                     <div class="row">
